--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-generator": "^4.16.0",
+    "http-delayed-response": "0.0.4",
     "nodemailer": "^4.7.0",
     "nodemon": "^1.18.6",
     "path": "^0.12.7",
