--- a/package.json
+++ b/package.json
@@ -17,14 +17,11 @@
     "url": "https://github.com/ahong14/SFPayroll_Updated_Design/issues"
   },
   "homepage": "https://github.com/ahong14/SFPayroll_Updated_Design#readme",
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.0",
-    "babel-preset-es2015": "^6.24.1"
-  },
+  "devDependencies": {},
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "create-react-app": "^2.1.3",
     "express": "^4.16.4",
     "express-generator": "^4.16.0",
     "nodemailer": "^4.7.0",
