--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.2.1",
     "jquery": "^3.3.1",
+    "popper.js": "^1.14.6",
     "react": "^16.7.0",
     "react-burger-menu": "^2.6.1",
     "react-dom": "^16.7.0",
