--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemailer": "^4.7.0",
     "nodemon": "^1.18.6",
     "path": "^0.12.7",
+    "popper.js": "^1.14.6",
     "query-string": "^6.1.0"
   }
 }
