--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "devDependencies": {},
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bson": "^4.0.1",
     "cors": "^2.8.5",
     "create-react-app": "^2.1.3",
     "express": "^4.16.4",
     "express-generator": "^4.16.0",
+    "mongoose": "^5.4.5",
     "nodemailer": "^4.7.0",
     "nodemon": "^1.18.6",
     "path": "^0.12.7",
