--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^3.3.0",
     "react-image-gallery": "^0.8.12",
     "react-responsive-carousel": "^3.1.45",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-sidebar": "^3.0.2"
