--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "backend": "nodemon server.js",
     "frontend": "cd frontend/ && npm run start",
-    "start": "concurrently \"npm run backend\" \"npm run frontend\"",
+    "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
+    "start": "node server.js",
     "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "repository": {
