--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "backend": "cd server/ && nodemon server.js",
     "frontend": "cd frontend/ && npm run start",
     "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
-    "start": "node server.js",
+    "start": "cd server && node server.js",
     "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "repository": {
