--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
     "create-react-app": "^2.1.3",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-generator": "^4.16.0",
     "mongoose": "^5.7.5",
