--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,9 +2,9 @@ server {
         listen 80;
         listen [::]:80;
 
-        server_name http://157.245.228.173
+        server_name http://157.245.228.173;
         location / {
-            proxy_pass http://server:4000;
+            proxy_pass http://node_server:4000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
