--- a/certbot/Dockerfile
+++ b/certbot/Dockerfile
@@ -1,1 +1,4 @@
-FROM certbot
+FROM certbot:cerbot
+
+RUN  certonly --webroot --webroot-path=/var/www/html --email alexhong681@gmail.com --agree-tos --no-eff-email --staging -d 157.245.228.173 
+
