--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,28 +14,7 @@ server {
 
         location ~ /.well-known/acme-challenge {
             allow all;
-            root /var/www/html;
+            root /usr/share/nginx/html;
         }
 }
 
-server {
-    listen: 443 ssl;
-    listen [::]:443 ssl;
-
-    server_name 157.245.228.173;
-    location / {
-        proxy_pass http://node_server:4000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
-
-
-    location ~ /.well-known/acme-challenge {
-            allow all;
-            root /var/www/html;
-    }
-
-}
