--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,10 @@
 server {
         listen 80;
-        listen [::]:80;
-
-        server_name 157.245.228.173;
-        location / {
+	
+        server_name sfpayroll.org www.sfpayroll.org;
+        
+        
+	location / {
             proxy_pass http://node_server:4000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -11,10 +12,29 @@ server {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
-
-        location ~ /.well-known/acme-challenge {
-            allow all;
-            root /usr/share/nginx/html;
-        }
+	
 }
 
+server {
+	listen 443 ssl http2;
+	listen [::]:443 ssl http2;
+	ssl on;
+	server_name sfpayroll.org www.sfpayroll.org;
+
+	ssl_certificate /etc/letsencrypt/live/sfpayroll.org/cert.pem;
+        ssl_certificate_key /etc/letsencrypt/live/sfpayroll.org/privkey.pem;
+	ssl_dhparam  /etc/ssl/certs/dhparam.pem;
+	
+
+	location / {
+		proxy_pass http://node_server:4000;
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection 'upgrade';
+		proxy_set_header   Host $host;
+		proxy_cache_bypass $http_upgrade;
+   		proxy_set_header   X-Real-IP $remote_addr;
+   		proxy_set_header   X-Forwarded-Proto https;
+	}
+
+}
