--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,12 +5,7 @@ server {
         
         
 	location / {
-            proxy_pass http://node_server:4000;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
+            return 301 https://$host$request_uri;
         }
 	
 }
@@ -18,13 +13,20 @@ server {
 server {
 	listen 443 ssl http2;
 	listen [::]:443 ssl http2;
-	ssl on;
 	server_name sfpayroll.org www.sfpayroll.org;
-
-	ssl_certificate /etc/letsencrypt/live/sfpayroll.org/cert.pem;
+	
+	#read in ssl certificates from lets encrypt
+	#private key and certificate
+	ssl_certificate /etc/letsencrypt/live/sfpayroll.org/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/sfpayroll.org/privkey.pem;
 	ssl_dhparam  /etc/ssl/certs/dhparam.pem;
 	
+
+	ssl_protocols TLSv1.2 TLSv1.3;
+	ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384;
+
+	ssl_prefer_server_ciphers on;
+	ssl_session_cache shared:SSL:10m;
 
 	location / {
 		proxy_pass http://node_server:4000;
