--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:4000/",
+  "proxy": "http://node_server:4000/",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "axios": "^0.18.0",
