--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://node_server:4000/",
+  "proxy": "http://localhost:4000/",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "axios": "^0.18.0",
@@ -19,7 +19,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "react-sidebar": "^3.0.2"
+    "react-sidebar": "^3.0.2",
+    "validator": "^12.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
