--- a/server/package.json
+++ b/server/package.json
@@ -33,10 +33,12 @@
     "express": "^4.16.4",
     "express-generator": "^4.16.0",
     "mongoose": "^5.7.5",
+    "morgan": "^1.9.1",
     "nodemailer": "^4.7.0",
     "nodemon": "^1.18.6",
     "path": "^0.12.7",
     "popper.js": "^1.14.6",
-    "query-string": "^6.1.0"
+    "query-string": "^6.1.0",
+    "redis": "^2.8.0"
   }
 }
