--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,8 @@
     "path": "^0.12.7",
     "popper.js": "^1.14.6",
     "query-string": "^6.1.0",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "set-value": "^3.0.1",
+    "tar": "^5.0.5"
   }
 }
