mapped inputs to modal message, modified email for proper formatting of job posting info

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -25,6 +25,15 @@ services:
     depends_on:
       - node_server
 
+  redis:
+    image: redis
+    ports: 
+      - "6379:6379"
+    container_name: redis
+    restart: unless-stopped
+    depends_on:
+      - node_server
+
   nginx:
     build:
       context: ./nginx_local
