--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "moment-timezone": "^0.5.27",
     "mongoose": "^5.7.5",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "nodemailer": "^4.7.0",
     "nodemon": "^1.18.6",
     "path": "^0.12.7",
