--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,10 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "4000:4000"
-    container_name: node_server
-    restart: unless-stopped
+      - "4001-4003:4000"
+    restart: always
+    depends_on:
+      - redis
 
   #redis cache
   redis:
@@ -17,9 +18,7 @@ services:
     ports:
       - "6379:6379"
     container_name: redis
-    restart: unless-stopped
-    depends_on:
-      - node_server
+    restart: always
   
   #nginx web server
   nginx:
@@ -33,6 +32,6 @@ services:
       - /etc/letsencrypt:/etc/letsencrypt
       - /etc/ssl/certs:/etc/ssl/certs
     container_name: nginx
-    restart: unless-stopped
+    restart: always
     depends_on:
       - node_server  
