--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,6 +9,15 @@ server {
         }
 	
 }
+#reference: https://medium.com/@samanbaboli/how-to-load-balancing-nodejs-apps-using-nginx-a3b4ceb7c782
+upstream node_servers{
+	server node_server:4000;
+	server node_server:4001;
+	server node_server:4002;
+	server node_server:4003;
+}
+
+
 
 server {
 	listen 443 ssl http2;
@@ -29,7 +38,7 @@ server {
 	ssl_session_cache shared:SSL:10m;
 
 	location / {
-		proxy_pass http://node_server:4000;
+		proxy_pass http://node_servers;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection 'upgrade';
@@ -37,6 +46,10 @@ server {
 		proxy_cache_bypass $http_upgrade;
    		proxy_set_header   X-Real-IP $remote_addr;
    		proxy_set_header   X-Forwarded-Proto https;
+		proxy_connect_timeout       300s;
+		proxy_send_timeout          300s;
+		proxy_read_timeout          300s;
+		send_timeout                300s;
 	}
 
 }
