set load balancing method to least connected

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,6 +11,7 @@ server {
 }
 #reference: https://medium.com/@samanbaboli/how-to-load-balancing-nodejs-apps-using-nginx-a3b4ceb7c782
 upstream node_servers{
+	least_conn;
 	server node_server:4000;
 	server node_server:4001;
 	server node_server:4002;
