--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,4 @@
+#http server, redirect requests to ssl server
 server {
         listen 80;
 	
@@ -18,8 +19,7 @@ upstream node_servers{
 	server node_server:4003;
 }
 
-
-
+#ssl server
 server {
 	listen 443 ssl http2;
 	listen [::]:443 ssl http2;
@@ -28,7 +28,7 @@ server {
 	#read in ssl certificates from lets encrypt
 	#private key and certificate
 	ssl_certificate /etc/letsencrypt/live/sfpayroll.org/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/sfpayroll.org/privkey.pem;
+    ssl_certificate_key /etc/letsencrypt/live/sfpayroll.org/privkey.pem;
 	ssl_dhparam  /etc/ssl/certs/dhparam.pem;
 	
 
@@ -37,6 +37,8 @@ server {
 
 	ssl_prefer_server_ciphers on;
 	ssl_session_cache shared:SSL:10m;
+
+	client_max_body_size 30M;
 
 	location / {
 		proxy_pass http://node_servers;
