fixed bug regarding pdf files separting among load balancing, setup volume from host pdfs to container pdf files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "4001-4003:4000"
+    volumes:
+      - ./server/pdfs:/app/src/server/pdfs
     restart: always
     depends_on:
       - redis
