--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/ahong14/SFPayroll_Updated_Design#readme",
   "devDependencies": {},
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "bson": "^4.0.1",
     "concurrently": "^4.1.0",
