--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.2.1",
     "history": "^4.10.1",
     "jquery": "^3.3.1",
+    "js-cookie": "^2.2.1",
     "popper.js": "^1.14.6",
     "react": "^16.7.0",
     "react-burger-menu": "^2.6.1",
