--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-generator": "^4.16.0",
+    "jsonwebtoken": "^8.5.1",
     "moment-timezone": "^0.5.27",
     "mongoose": "^5.7.5",
     "morgan": "^1.9.1",
