--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,24 +4,27 @@
   "private": true,
   "proxy": "http://node_server:4000/",
   "dependencies": {
-    "@material-ui/core": "^3.9.2",
-    "axios": "^0.18.0",
-    "bootstrap": "^4.2.1",
+    "@material-ui/core": "^3.9.4",
+    "axios": "^0.18.1",
+    "bootstrap": "^4.4.1",
     "history": "^4.10.1",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "js-cookie": "^2.2.1",
-    "popper.js": "^1.14.6",
-    "react": "^16.7.0",
-    "react-burger-menu": "^2.6.1",
-    "react-dom": "^16.7.0",
-    "react-icons": "^3.3.0",
-    "react-image-gallery": "^0.8.12",
-    "react-responsive-carousel": "^3.1.45",
+    "popper.js": "^1.16.1",
+    "react": "^16.12.0",
+    "react-burger-menu": "^2.6.13",
+    "react-dom": "^16.12.0",
+    "react-icons": "^3.8.0",
+    "react-image-gallery": "^0.8.18",
+    "react-redux": "^7.1.3",
+    "react-responsive-carousel": "^3.1.51",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-sidebar": "^3.0.2",
-    "validator": "^12.1.0"
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "validator": "^12.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
