--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "express": "^4.16.4",
     "express-generator": "^4.16.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
     "mongoose": "^5.7.5",
     "morgan": "^1.9.1",
