--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "history": "^4.10.1",
     "jquery": "^3.4.1",
     "js-cookie": "^2.2.1",
+    "moment-timezone": "^0.5.27",
     "popper.js": "^1.16.1",
     "react": "^16.12.0",
     "react-burger-menu": "^2.6.13",
