--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.12.0",
     "react-icons": "^3.8.0",
     "react-image-gallery": "^0.8.18",
+    "react-lazy-load-image-component": "^1.4.1",
     "react-redux": "^7.1.3",
     "react-responsive-carousel": "^3.1.51",
     "react-router": "^4.3.1",
