--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.18.3",
     "bson": "^4.0.1",
     "concurrently": "^4.1.0",
+    "console-stamp": "^0.2.9",
     "cors": "^2.8.5",
     "create-react-app": "^2.1.3",
     "dotenv": "^8.2.0",
