--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,31 +4,27 @@
   "private": true,
   "proxy": "http://node_server:4000/",
   "dependencies": {
-    "@material-ui/core": "^3.9.4",
-    "axios": "^0.18.1",
+    "@material-ui/core": "^4.9.8",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "exif-js": "^2.3.0",
     "history": "^4.10.1",
     "jquery": "^3.4.1",
     "js-cookie": "^2.2.1",
-    "moment-timezone": "^0.5.27",
+    "moment-timezone": "^0.5.28",
     "popper.js": "^1.16.1",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.16",
-    "react-burger-menu": "^2.6.13",
-    "react-dom": "^16.12.0",
-    "react-icons": "^3.8.0",
-    "react-image-gallery": "^0.8.18",
+    "react-dom": "^16.13.1",
+    "react-icons": "^3.9.0",
     "react-lazy-load-image-component": "^1.4.1",
-    "react-redux": "^7.1.3",
-    "react-responsive-carousel": "^3.1.51",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
-    "react-sidebar": "^3.0.2",
+    "react-redux": "^7.2.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "validator": "^12.2.0"
+    "validator": "^13.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
