--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
   "homepage": "https://github.com/ahong14/SFPayroll_Updated_Design#readme",
   "dependencies": {
     "concurrently": "^5.0.2"
-  }
+  },
+  "devDependencies": {}
 }
