--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,7 @@
     "backend": "nodemon server.js",
     "frontend": "cd frontend/ && npm run start",
     "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
-    "start": "node server.js",
-    "heroku-postbuild": "cd frontend && npm install && npm run build"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -25,29 +24,21 @@
   "devDependencies": {},
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
-    "bson": "^4.0.1",
-    "concurrently": "^4.1.0",
+    "body-parser": "^1.19.0",
+    "concurrently": "^5.1.0",
     "console-stamp": "^0.2.9",
     "cors": "^2.8.5",
-    "create-react-app": "^2.1.3",
     "dotenv": "^8.2.0",
-    "express": "^4.16.4",
-    "express-generator": "^4.16.0",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
-    "moment-timezone": "^0.5.27",
-    "mongoose": "^5.7.5",
-    "morgan": "^1.9.1",
+    "moment-timezone": "^0.5.28",
+    "mongoose": "^5.9.6",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "nodemailer": "^4.7.0",
-    "nodemon": "^1.18.6",
-    "path": "^0.12.7",
+    "nodemailer": "^6.4.6",
+    "nodemon": "^2.0.2",
     "pdfkit": "^0.11.0",
-    "popper.js": "^1.14.6",
-    "query-string": "^6.1.0",
-    "redis": "^2.8.0",
-    "set-value": "^3.0.1",
-    "tar": "^5.0.5"
+    "redis": "^3.0.2"
   }
 }
