--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://node_server:4000/",
+  "proxy": "http://localhost:4000/",
   "dependencies": {
     "@material-ui/core": "^4.9.8",
     "axios": "^0.19.2",
@@ -15,6 +15,7 @@
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
     "react-lazy-load-image-component": "^1.4.1",
