--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,9 @@
     "url": "https://github.com/ahong14/SFPayroll_Updated_Design/issues"
   },
   "homepage": "https://github.com/ahong14/SFPayroll_Updated_Design#readme",
-  "devDependencies": {},
+  "devDependencies": {
+    "prettier": "^2.2.1"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -30,12 +32,15 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "google-auth-library": "^6.1.3",
+    "googleapis": "^39.2.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
     "mongoose": "^5.9.6",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.6",
     "nodemon": "^2.0.4",
     "pdfkit": "^0.11.0",
