--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
     "react-lazy-load-image-component": "^1.4.1",
+    "react-pdf": "^5.2.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
