--- a/.github/workflows/github_action_deploy.yml
+++ b/.github/workflows/github_action_deploy.yml
@@ -14,9 +14,7 @@ jobs:
             key: '${{secrets.DIGITAL_OCEAN_SSH_KEY}}'
             username: '${{secrets.DIGITAL_OCEAN_SSH_USER}}'
             script: |
-                whoami
-                ls
-                #sfpayroll
-                #git pull origin master
-                #sudo make start-production
-                #echo "Build/Deploy sfpayroll executed successfully"
+                cd projects/sfpayroll/SFPayroll_Updated_Design/
+                git pull origin master
+                sudo make start-production
+                echo "Build/Deploy sfpayroll executed successfully"
