--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
     "name": "frontend",
     "version": "0.1.0",
     "private": true,
-    "proxy": "http://node_server:4000/",
+    "proxy": "http://localhost:4000/",
     "dependencies": {
         "@material-ui/core": "^4.9.8",
         "axios": "^0.24.0",
