--- a/.github/workflows/github_action_deploy.yml
+++ b/.github/workflows/github_action_deploy.yml
@@ -1,20 +1,24 @@
 name: Build/Deploy sfpayroll
-'on':
-  push:
-    branches:
-      - master
+
+on:
+    workflow_dispatch: # manual workflow trigger
+    push: # push to branches trigger action
+        branches:
+            - master
+
 jobs:
-  deploy:
-      runs-on: ubuntu-18.04
-      steps:
-        - name: Pull master and deploy docker containers
-          uses: appleboy/ssh-action@master
-          with:
-            host: '${{secrets.DIGITAL_OCEAN_HOST}}'
-            key: '${{secrets.DIGITAL_OCEAN_SSH_KEY}}'
-            username: '${{secrets.DIGITAL_OCEAN_SSH_USER}}'
-            script: |
-                cd projects/sfpayroll/SFPayroll_Updated_Design/
-                git pull origin master
-                sudo make start-production
-                echo "Build/Deploy sfpayroll executed successfully"
+    deploy:
+        runs-on: ubuntu-latest # type of machine the job runs on
+        steps:
+            - name: Pull master and deploy docker containers
+              uses: appleboy/ssh-action@master
+              with:
+                  host: ${{secrets.DIGITAL_OCEAN_HOST}}
+                  key: ${{secrets.DIGITAL_OCEAN_SSH_KEY}}
+                  username: ${{secrets.DIGITAL_OCEAN_SSH_USER}}
+
+              script: |
+                  sfpayroll
+                  git pull origin master
+                  sudo make start-production
+                  echo "Build/Deploy sfpayroll executed successfully"
